--- a/fern/pages/api-reference/column-configs.mdx
+++ b/fern/pages/api-reference/column-configs.mdx
@@ -1,9 +1,7 @@
 ---
-title: Column Configs
+title: Column Configurations
 description: API reference for column configuration objects.
 ---
-
-# Column Configurations
 
 The `column_configs` module defines configuration objects for all Data Designer column types. Each configuration inherits from `SingleColumnConfig`, which provides shared arguments like the column `name`, whether to `drop` the column after generation, and the `column_type`.
 
