--- a/fern/pages/api-reference/config-builder.mdx
+++ b/fern/pages/api-reference/config-builder.mdx
@@ -1,9 +1,7 @@
 ---
-title: Config Builder
+title: Data Designer's Config Builder
 description: API reference for the DataDesignerConfigBuilder.
 ---
-
-# Data Designer's Config Builder
 
 The `config_builder` module provides a high-level interface for constructing Data Designer configurations through the `DataDesignerConfigBuilder` class, enabling programmatic creation of `DataDesignerConfig` objects by incrementally adding column configurations, constraints, processors, and profilers.
 
