--- a/fern/pages/api-reference/data-designer-config.mdx
+++ b/fern/pages/api-reference/data-designer-config.mdx
@@ -1,9 +1,7 @@
 ---
-title: Data Designer Config
+title: Data Designer Configuration
 description: API reference for the DataDesignerConfig object.
 ---
-
-# Data Designer Configuration
 
 `DataDesignerConfig` is the main configuration object for building datasets with Data Designer. It is a declarative configuration for defining the dataset you want to generate column-by-column, including options for dataset post-processing, validation, and profiling.
 
