--- a/fern/pages/api-reference/sampler-params.mdx
+++ b/fern/pages/api-reference/sampler-params.mdx
@@ -1,9 +1,7 @@
 ---
-title: Sampler Params
+title: Sampler Parameters
 description: API reference for sampler parameter configuration objects.
 ---
-
-# Sampler Parameters
 
 The `sampler_params` module defines parameter configuration objects for all Data Designer sampler types. Sampler parameters are used within the `SamplerColumnConfig` to specify how values should be generated for sampled columns.
 
