--- a/fern/pages/api-reference/validator-params.mdx
+++ b/fern/pages/api-reference/validator-params.mdx
@@ -1,9 +1,7 @@
 ---
-title: Validator Params
+title: Validator Parameters
 description: API reference for validator parameter configuration objects.
 ---
-
-# Validator Parameters
 
 When creating a `ValidationColumnConfig`, two parameters are used to define the validator: `validator_type` and `validator_params`.
 The `validator_type` parameter can be set to either `code`, `local_callable` or `remote`. The `validator_params` accompanying each of these is described below.
