--- a/fern/pages/concepts/models/configure-with-cli.mdx
+++ b/fern/pages/concepts/models/configure-with-cli.mdx
@@ -1,9 +1,7 @@
 ---
-title: Configure with CLI
+title: Configuring Model Settings Using The CLI
 description: Use the Data Designer CLI to manage model providers and configurations.
 ---
-
-# Configuring Model Settings Using The CLI
 
 The Data Designer CLI provides an interactive interface for creating and managing default model providers and model configurations stored in your Data Designer home directory (default: `~/.data-designer/`).
 
