--- a/fern/pages/concepts/models/model-configs.mdx
+++ b/fern/pages/concepts/models/model-configs.mdx
@@ -1,9 +1,7 @@
 ---
-title: Model Configs
+title: Model Configurations
 description: Configure model settings for synthetic data generation.
 ---
-
-# Model Configurations
 
 Model configurations define the specific models you use for synthetic data generation and their associated inference parameters. Each `ModelConfig` represents a named model that can be referenced throughout your data generation workflows.
 
