--- a/fern/pages/concepts/person-sampling.mdx
+++ b/fern/pages/concepts/person-sampling.mdx
@@ -1,9 +1,7 @@
 ---
-title: Person Sampling
+title: Person Sampling in Data Designer
 description: Generate synthetic person data for your datasets.
 ---
-
-# Person Sampling in Data Designer
 
 Person sampling in Data Designer allows you to generate synthetic person data for your datasets. There are two distinct approaches, each with different capabilities and use cases.
 
