--- a/fern/pages/contributing.mdx
+++ b/fern/pages/contributing.mdx
@@ -1,9 +1,7 @@
 ---
-title: Contributing
+title: 🎨✨ Contributing to NeMo Data Designer 🎨✨
 description: How to contribute to NeMo Data Designer
 ---
-
-# 🎨✨ Contributing to NeMo Data Designer 🎨✨
 
 Thank you for your interest in contributing to Data Designer!
 
