--- a/fern/pages/index.mdx
+++ b/fern/pages/index.mdx
@@ -1,9 +1,7 @@
 ---
-title: Welcome to NeMo Data Designer
+title: 🎨 NeMo Data Designer Library
 description: A general framework for generating high-quality synthetic data from scratch or using seed data.
 ---
-
-# 🎨 NeMo Data Designer Library
 
 [![GitHub](https://img.shields.io/badge/github-repo-952fc6?logo=github)](https://github.com/NVIDIA-NeMo/DataDesigner) [![License](https://img.shields.io/badge/License-Apache_2.0-0074df.svg)](https://opensource.org/licenses/Apache-2.0) [![NeMo Microservices](https://img.shields.io/badge/NeMo-Microservices-76b900)](https://docs.nvidia.com/nemo/microservices/latest/index.html)
 
