--- a/fern/pages/plugins/available.mdx
+++ b/fern/pages/plugins/available.mdx
@@ -1,8 +1,6 @@
 ---
-title: Available Plugins
+title: "🚧 Available Plugins: Coming Soon"
 description: List of available Data Designer plugins.
 ---
-
-# 🚧 Coming Soon
 
 This page will list available Data Designer plugins. Stay tuned!
