--- a/fern/pages/plugins/example.mdx
+++ b/fern/pages/plugins/example.mdx
@@ -1,13 +1,11 @@
 ---
-title: Example Plugin
+title: "Example Plugin: Index Multiplier"
 description: A complete walkthrough for creating a Data Designer plugin.
 ---
 
 <Warning title="Experimental Feature">
 The plugin system is currently **experimental** and under active development. The documentation, examples, and plugin interface are subject to significant changes in future releases. If you encounter any issues, have questions, or have ideas for improvement, please consider starting [a discussion on GitHub](https://github.com/NVIDIA-NeMo/DataDesigner/discussions).
 </Warning>
-
-# Example Plugin: Index Multiplier
 
 In this guide, we will build a simple plugin that generates values by multiplying the row index by a user-specified multiplier. Admittedly, not the most useful plugin, but it demonstrates the required steps 😜.
 
