--- a/fern/pages/tutorials/images-as-context.mdx
+++ b/fern/pages/tutorials/images-as-context.mdx
@@ -1,12 +1,10 @@
 ---
-title: Images as Context
+title: "🎨 Data Designer Tutorial: Images as Context for Vision-Based Generation"
 ---
 
 <Info title="Interactive Version">
 Run this tutorial interactively in [Google Colab](https://colab.research.google.com/github/NVIDIA-NeMo/DataDesigner/blob/main/docs/colab_notebooks/4-providing-images-as-context.ipynb).
 </Info>
-
-# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation
 
 #### 📚 What you'll learn
 
