--- a/fern/pages/tutorials/overview.mdx
+++ b/fern/pages/tutorials/overview.mdx
@@ -1,9 +1,7 @@
 ---
-title: Tutorials Overview
+title: 📓 Tutorials
 description: Step-by-step tutorials for learning Data Designer.
 ---
-
-# 📓 Tutorials
 
 Welcome to the Data Designer tutorials! These interactive notebooks guide you through the core concepts and features of Data Designer.
 
