--- a/fern/pages/tutorials/seeding-with-dataset.mdx
+++ b/fern/pages/tutorials/seeding-with-dataset.mdx
@@ -1,12 +1,10 @@
 ---
-title: Seeding with a Dataset
+title: "🎨 Data Designer Tutorial: Seeding with an External Dataset"
 ---
 
 <Info title="Interactive Version">
 Run this tutorial interactively in [Google Colab](https://colab.research.google.com/github/NVIDIA-NeMo/DataDesigner/blob/main/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb).
 </Info>
-
-# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset
 
 #### 📚 What you'll learn
 
