--- a/fern/pages/tutorials/structured-outputs.mdx
+++ b/fern/pages/tutorials/structured-outputs.mdx
@@ -1,12 +1,10 @@
 ---
-title: Structured Outputs and Jinja Expressions
+title: "🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions"
 ---
 
 <Info title="Interactive Version">
 Run this tutorial interactively in [Google Colab](https://colab.research.google.com/github/NVIDIA-NeMo/DataDesigner/blob/main/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb).
 </Info>
-
-# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions
 
 #### 📚 What you'll learn
 
