--- a/fern/pages/tutorials/the-basics.mdx
+++ b/fern/pages/tutorials/the-basics.mdx
@@ -1,9 +1,7 @@
 ---
-title: "Tutorial: The Basics"
+title: "🎨 Data Designer Tutorial: The Basics"
 description: Learn the fundamentals of Data Designer by generating a simple product review dataset.
 ---
-
-# 🎨 Data Designer Tutorial: The Basics
 
 <Info title="Interactive Version">
 Run this tutorial interactively in [Google Colab](https://colab.research.google.com/github/NVIDIA-NeMo/DataDesigner/blob/main/docs/colab_notebooks/1-the-basics.ipynb).
