--- a/fern/pages/plugins/overview.mdx
+++ b/fern/pages/plugins/overview.mdx
@@ -1,9 +1,7 @@
 ---
-title: Plugins Overview
+title: Data Designer Plugins
 description: Extend Data Designer's capabilities with custom plugins.
 ---
-
-# Data Designer Plugins
 
 <Warning title="Experimental Feature">
 The plugin system is currently **experimental** and under active development. The documentation, examples, and plugin interface are subject to significant changes in future releases. If you encounter any issues, have questions, or have ideas for improvement, please consider starting [a discussion on GitHub](https://github.com/NVIDIA-NeMo/DataDesigner/discussions).
